--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <div class="item-box">
             <div class="btn-it-l">Who is the sponsor of this giveaway?</div>
             <div class="box-content-l">
-              <p>The main sponsor of this event is Dogecoin.</p>
+              <p>The main sponsor of this event is Dogemoney.</p>
             </div>
           </div>
           <div class="item-box">
